# cantClient

./: .gitignore  CMakeLists.txt  ConfigFile.h  Makefile  README.md  client  config.txt  main.c
.github/: README.md
include/: WebSocket.hpp
res/: config.txt
src/: main.c  main.cpp
src/include/: ConfigFile.h
src/lib/: WebSocket.cpp
